--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "iview": "^3.2.2",
     "vue": "^2.5.2",
+    "vue-aplayer": "^1.6.1",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
